--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,15 @@
             "scripts": ["background.js", "bar.js"]
         }
     },
-    "permissions": ["alwaysOnTopWindows", "https://userstream.twitter.com/*", "https://api.twitter.com/*", "identity"],
+    "permissions": [
+        "alwaysOnTopWindows",
+        "https://userstream.twitter.com/*",
+        "https://api.twitter.com/*",
+        "https://userstream.twitter.com/1.1/user.json",
+        "https://api.twitter.com/oauth/authorize",
+        "https://api.twitter.com/oauth/request_token",
+        "https://api.twitter.com/oauth/access_token",
+        "identity"
+    ],
     "icons": { "16": "calculator-16.png", "128": "calculator-128.png" }
 }
